err/collective.zopeedit.err
Listing '.'...
Listing './bin'...
Listing './collective'...
Listing './collective/zopeedit'...
Listing './collective/zopeedit/docs'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/zopeedit'...
Listing './lib/python3.5/site-packages/collective/zopeedit/Plugins'...
Compiling './lib/python3.5/site-packages/collective/zopeedit/Plugins/homesite5.py'...
***   File "./lib/python3.5/site-packages/collective/zopeedit/Plugins/homesite5.py", line 59
    print 'Connecting to HomeSite...'
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/collective/zopeedit/locales'...
Listing './lib/python3.5/site-packages/collective/zopeedit/locales/en'...
Listing './lib/python3.5/site-packages/collective/zopeedit/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zopeedit/locales/es'...
Listing './lib/python3.5/site-packages/collective/zopeedit/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zopeedit/locales/fr'...
Listing './lib/python3.5/site-packages/collective/zopeedit/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/zopeedit/man'...
Listing './lib/python3.5/site-packages/collective/zopeedit/posix'...
Compiling './lib/python3.5/site-packages/collective/zopeedit/zopeedit.py'...
***   File "./lib/python3.5/site-packages/collective/zopeedit/zopeedit.py", line 308
    os.chmod(self.input_file, 0777)
                                 ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/collective.zopeedit-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/applications'...
Listing './share/icons'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/mime'...
Listing './share/mime/application'...
Listing './share/python-wheels'...
